// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Team Store > deleteTeam shall reset current team 1`] = `
{
  "bedtime": "21:30",
  "camp": false,
  "index": 1,
  "island": {
    "areaBonus": 0,
    "berries": [],
    "expert": false,
    "name": "Greengrass Isle",
    "rankThresholds": [
      0,
      3118,
      7171,
      11693,
      17149,
      23385,
      31492,
      41314,
      53006,
      65634,
      79197,
      93540,
      109130,
      125032,
      156121,
      187832,
      220177,
      253169,
      286821,
      321146,
      356158,
      391870,
      428296,
      465451,
      532707,
      601308,
      742056,
      885619,
      1029700,
      1199506,
      1486800,
      1795052,
      2165541,
      2604280,
      3245795,
    ],
    "shortName": "greengrass",
  },
  "memberIndex": 0,
  "memberIvs": {},
  "members": [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "name": "Helper team 2",
  "production": undefined,
  "recipeType": "curry",
  "stockpiledBerries": [],
  "stockpiledIngredients": [],
  "version": 0,
  "wakeup": "06:00",
}
`;

exports[`Team Store > should have expected default state 1`] = `
{
  "currentIndex": 0,
  "domainVersion": 0,
  "loadingMembers": [
    false,
    false,
    false,
    false,
    false,
  ],
  "loadingTeams": false,
  "maxAvailableTeams": 10,
  "tab": "overview",
  "teams": [
    {
      "bedtime": "21:30",
      "camp": false,
      "index": 0,
      "island": {
        "areaBonus": 0,
        "berries": [],
        "expert": false,
        "name": "Greengrass Isle",
        "rankThresholds": [
          0,
          3118,
          7171,
          11693,
          17149,
          23385,
          31492,
          41314,
          53006,
          65634,
          79197,
          93540,
          109130,
          125032,
          156121,
          187832,
          220177,
          253169,
          286821,
          321146,
          356158,
          391870,
          428296,
          465451,
          532707,
          601308,
          742056,
          885619,
          1029700,
          1199506,
          1486800,
          1795052,
          2165541,
          2604280,
          3245795,
        ],
        "shortName": "greengrass",
      },
      "memberIndex": 0,
      "memberIvs": {},
      "members": [
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ],
      "name": "Team 1",
      "production": undefined,
      "recipeType": "curry",
      "stockpiledBerries": [],
      "stockpiledIngredients": [],
      "version": 0,
      "wakeup": "06:00",
    },
  ],
  "timeWindow": "24H",
}
`;

exports[`Team Store > should reset the state correctly 1`] = `
{
  "currentIndex": 0,
  "domainVersion": 0,
  "loadingMembers": [
    false,
    false,
    false,
    false,
    false,
  ],
  "loadingTeams": false,
  "maxAvailableTeams": 10,
  "tab": "overview",
  "teams": [
    {
      "bedtime": "21:30",
      "camp": false,
      "index": 0,
      "island": {
        "areaBonus": 0,
        "berries": [],
        "expert": false,
        "name": "Greengrass Isle",
        "rankThresholds": [
          0,
          3118,
          7171,
          11693,
          17149,
          23385,
          31492,
          41314,
          53006,
          65634,
          79197,
          93540,
          109130,
          125032,
          156121,
          187832,
          220177,
          253169,
          286821,
          321146,
          356158,
          391870,
          428296,
          465451,
          532707,
          601308,
          742056,
          885619,
          1029700,
          1199506,
          1486800,
          1795052,
          2165541,
          2604280,
          3245795,
        ],
        "shortName": "greengrass",
      },
      "memberIndex": 0,
      "memberIvs": {},
      "members": [
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
      ],
      "name": "Team 1",
      "production": undefined,
      "recipeType": "curry",
      "stockpiledBerries": [],
      "stockpiledIngredients": [],
      "version": 0,
      "wakeup": "06:00",
    },
  ],
  "timeWindow": "24H",
}
`;

exports[`updateTeamMember > shall upsert local pokemon and calculate production 1`] = `
[
  undefined,
  undefined,
  "external-id",
  undefined,
  undefined,
]
`;
